--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>Promise</title>
 <head>
-    <h1>TIROMANCINANTE</h1>
+    <h1>TIROCINANTE</h1>
 </head>
 <script type = "module" src = "esercizio.js"></script>
 <body>
